--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
+    "eslint": "^8.10.0",
     "nodemon": "^2.0.7"
   }
 }
